# naval_moth

./: .clang-format  .clang-tidy  .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  PLAN.md  README.md  conanfile.py
.conan/: profile
.github/workflows/: release.yml
assets/audio/: LICENSE.md  README.md
assets/data/: enemies.json  guns.json  hulls.json  launchers.json  missiles.json  munitions.json  player.json  projectiles.json  sounds.json  weapons.json
src/: main.cpp  naval_application.cpp  naval_application.h
src/game/: aggro_system.cpp  aggro_system.h  angles.h  attenuation.cpp  attenuation.h  audio.cpp  audio.h  camera.h  camera_shake.cpp  camera_shake.h  combat_system.cpp  combat_system.h  components.h  defs.cpp  defs.h  emcon_system.cpp  emcon_system.h  hull_shape.h  miniaudio_impl.cpp  noise.h  propulsion_system.cpp  propulsion_system.h  render_system.cpp  render_system.h  sensor_system.cpp  sensor_system.h  ship_factory.cpp  ship_factory.h  terrain.cpp  terrain.h  tma_system.cpp  tma_system.h  units.h  wake_system.cpp  wake_system.h  wander_system.cpp  wander_system.h
src/layers/: game_layer.cpp  game_layer.h
